--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -483,6 +483,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_external_links_confirmation_summary">Bestätigen Sie, bevor Sie externe Links öffnen</string>
     <string name="pref_do_not_close_tabs_title">Tabs nicht schließen</string>
     <string name="pref_do_not_close_tabs_summary">Tabs durch Drücken der Zurück-Taste nicht schließen</string>
+    <string name="pref_scroll_volume_buttons_title">Lautstärketasten zum Scrollen</string>
+    <string name="pref_scroll_volume_buttons_summary">Lautstärketasten zum Scrollen verwenden</string>
     <string name="pref_preferences_submenu_title">Einstellungsmenü</string>
     <string name="pref_preferences_submenu_summary">Einige Einstellungen im Anwendungsmenü zeigen</string>
     <string name="pref_pin_markup_title">Markup-Buttons stecken</string>
