--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -491,6 +491,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_autohide_summary">Автоскрытие по регулярным выражениям</string>
     <!-- <string name="pref_hide_completely_title">Скрывать полностью</string>
     <string name="pref_hide_completely_summary">Не показывать скрытые посты и треды</string> -->
+    <string name="pref_swipe_to_hide_title">Скрывать свайпом</string>
+    <string name="pref_swipe_to_hide_summary">Скрывать треды свайпом</string>
     <string name="pref_external_links_confirmation_title">Подтверждение ссылок</string>
     <string name="pref_external_links_confirmation_summary">Спрашивать, прежде чем открывать внешние ссылки</string>
     <string name="pref_do_not_close_tabs_title">Не закрывать вкладки</string>
