MakabaModule add CAPTCHA auto-update preference

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -608,4 +608,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>45\uff05</item>
         <item>50\uff05</item>
     </string-array>
+    <!--
+        TODO: Translate pref_captcha_auto_update
+    <string name="pref_captcha_auto_update">Auto-update CAPTCHA</string>
+    -->
 </resources>
