--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -608,4 +608,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>50\uff05</item>
     </string-array>
     <string name="pref_captcha_auto_update">Auto-update CAPTCHA</string>
+    <string name="mark_code">Code</string>
 </resources>
