--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -620,4 +620,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_settings_import_title">Import</string>    
     <string name="app_settings_exporting">Exporting</string>
     <string name="app_settings_export_completed">Export to file successfully completed</string>
+    <string name="app_settings_import_completed">Import successfully completed</string>
+    <string name="app_settings_importing">Importing</string>
 </resources>
