--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -619,8 +619,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_settings_import_overwrite_summary">Vorhandene Daten beim Import überschreiben</string>
     <string name="pref_key_settings_ie_title">Einstellungen Import/Export</string>
     <string name="pref_key_settings_export_title">Export</string>
-    <!--
-        TODO: Translate pref_captcha_auto_update
     <string name="pref_captcha_auto_update">Auto-update CAPTCHA</string>
-    -->
+    <string name="mark_code">Code</string>
 </resources>
