--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -628,4 +628,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_settings_import_overwrite_summary">Перезапись существующих данных при импорте</string>
     <string name="pref_key_settings_ie_title">Импорт и экспорт настроек</string>
     <string name="pref_key_settings_export_title">Экспорт</string>
+    <string name="mark_code">Код</string>
 </resources>
