--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -634,4 +634,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_settings_export_title">Експорт</string>
     <string name="mark_code">Код</string>
     <string name="pref_post_thumbnail_scale_title">Розмір ескізів</string>
+    <string name="pref_key_post_thumbnail_scale_toast">Рекомендується очистити кеш</string>
 </resources>
