--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -623,4 +623,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="mark_code">Code</string>
     <string name="pref_post_thumbnail_scale_title">Thumbnail-Größe</string>
     <string name="pref_key_post_thumbnail_scale_toast">Es wird empfohlen, den Cache zu löschen</string>
+    <string name="newtab_select_local_directory">Speicherort angeben</string>
 </resources>
