--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -631,4 +631,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="mark_code">Код</string>
     <string name="pref_post_thumbnail_scale_title">Размер эскизов</string>
     <string name="pref_key_post_thumbnail_scale_toast">Рекомендуется очистить кэш</string>
+    <string name="newtab_select_local_directory">Указать расположение каталога</string>
 </resources>
