--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -635,4 +635,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="mark_code">Код</string>
     <string name="pref_post_thumbnail_scale_title">Розмір ескізів</string>
     <string name="pref_key_post_thumbnail_scale_toast">Рекомендується очистити кеш</string>
+    <string name="newtab_select_local_directory">Вказати розташування каталогу</string>
 </resources>
